--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Background music (YouTube) -->
+    <iframe width="0" height="0" src="https://www.youtube.com/embed/_4kHxtiuML0?autoplay=1&loop=1&playlist=_4kHxtiuML0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
     <div class="clock-container">
         <div class="analog-clock">
             <div class="hour-hand" id="hour-hand"></div>
             <div class="minute-hand" id="minute-hand"></div>
             <div class="second-hand" id="second-hand"></div>
         </div>
-        <div class="time-display" id="time-display">00:00:00</div>
+        <div class="time-display" id="time-display">00:00:00 AM</div>
     </div>
 
     <script src="script.js"></script>
