--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     </video>
 
     <!-- Fullscreen Button -->
-    <button id="fullscreen-btn" onclick="toggleFullScreen()"></button>
+    <button id="fullscreen-btn" onclick="toggleFullScreen()">Fullscreen</button>
+
+    <!-- 3x3 Grid Button -->
+    <button id="play-video-btn" onclick="playAndFullscreen()">Play & Fullscreen</button>
 
     <div class="clock-container">
         <div class="analog-clock">
