--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <!-- Fullscreen Button -->
     <button id="fullscreen-btn" onclick="toggleFullScreen()">Fullscreen</button>
 
-    <!-- 3x3 Grid Button -->
+    <!-- Play Video Button -->
     <button id="play-video-btn" onclick="playAndFullscreen()">Play & Fullscreen</button>
+
+    <!-- Play Music Button -->
+    <button id="play-music-btn" onclick="playMusic()">Play Music</button>
 
     <div class="clock-container">
         <div class="analog-clock">
